attempt cors fix 3x

--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,7 @@
       ]
     }
   ]
-  // "rewrites": [
-  //   { "source": "/(.*)", "destination": "/api/index" }
-  // ]
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/api/index" }
+  ]
 }
