--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,15 @@
-cffi==1.15.1
-click==8.1.3
-cryptography==39.0.1
-Flask==2.2.2
-Flask-Cors==3.0.10
-Flask-Login==0.6.2
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.2
-psycopg2-binary==2.9.5
-pyAesCrypt==6.0.0
-pycparser==2.21
-six==1.16.0
-Werkzeug==2.2.2
-shortuuid==1.0.11
-Flask-SQLAlchemy==3.0.3
-Flask-JWT-Extended==4.4.4
-sqlalchemy-json==0.5.0
+altgraph @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot2/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-124/altgraph-0.17.2-py2.py3-none-any.whl
+beautifulsoup4==4.12.0
+certifi==2022.12.7
+charset-normalizer==3.1.0
+future @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot2/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-124/future-0.18.2-py3-none-any.whl
+idna==3.4
+macholib @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot2/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-124/macholib-1.15.2-py2.py3-none-any.whl
 requests==2.28.2
+shortuuid==1.0.11
+six @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot2/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-124/six-1.15.0-py2.py3-none-any.whl
+soupsieve==2.4
+SQLAlchemy==2.0.7
+sqlalchemy-json==0.5.0
+typing_extensions==4.5.0
+urllib3==1.26.15
